--- a/libs/css/popup.css
+++ b/libs/css/popup.css
@@ -6,116 +6,86 @@
     left: 0;
     background-color: rgba(0,0,0,0.3);
     overflow: hidden;
+    z-index: 9998;
+}
+
+.modal-content {
+    display: none;
+    position: absolute;
+    max-height: 90%;
+    max-width: 80%;
     z-index: 9999;
 }
 
-.popup-window {
-    display: none;
+.popup-window.static .popup-container {
     position: absolute;
-    background: #fff;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-    max-height: 90%;
-    max-width: 80%;
-    border: 1px solid #ddd;
+    margin-top: 0;
+    top: 51px;
+    right: 0;
+    left: 0;
+    bottom: 65px;
 }
 
-    .popup-window .popup-window-title {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        line-height: 50px;
-        padding-left: 15px;
-        background: #eee;
-        border-bottom: 1px solid #ddd;
-        font-size: 18px;
-        font-weight: lighter;
-    }
-
-    .popup-window .popup-window-close {
-        position: absolute;
-        top: 0;
-        right: 0;
+    .popup-window.static .popup-container:last-child {
         bottom: 0;
-        width: 50px;
-        cursor: pointer;
-        text-align: center;
     }
 
-        .popup-window .popup-window-close:hover {
+.modal-body {
+    position: relative;
+    min-height: 85px;
+}
+
+    .modal-body .modal-content-icon {
+        font-size: 4em;
+        position: absolute;
+        top: 0;
+        left: 15px;
+    }
+
+        .modal-body .modal-content-icon + div {
+            margin-left: 65px;
+        }
+
+.popup-window .popup-window-icon .fa {
+    display: block;
+}
+
+
+.popup-window .popup-container .popup-content {
+    display: block;
+    text-align: center;
+    padding: 15px;
+}
+
+.popup-window .popup-window-icon + .popup-content {
+    margin-left: 75px;
+}
+
+.popup-window .popup-buttons {
+    margin: 15px 0;
+    text-align: center;
+}
+
+.popup-window.static .popup-buttons {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.popup-window .popup-buttons button {
+    margin: 0 5px;
+    min-width: 100px;
+}
+
+    .popup-window .popup-buttons button.popup-button {
+        padding: 10px 15px;
+        border: 1px solid #ddd;
+        background: #eee;
+        cursor: pointer;
+    }
+
+        .popup-window .popup-buttons button.popup-button:hover {
+            border-color: #ccc;
             background-color: #ddd;
         }
-
-    .popup-window .popup-container {
-        display: block;
-        position: relative;
-        margin-top: 51px;
-        padding: 15px;
-        float: left;
-        width: 100%;
-        min-width: 300px;
-        overflow-y: auto;
-    }
-
-    .popup-window.static .popup-container {
-        position: absolute;
-        margin-top: 0;
-        top: 51px;
-        right: 0;
-        left: 0;
-        bottom: 65px;
-    }
-
-        .popup-window.static .popup-container:last-child {
-            bottom: 0;
-        }
-
-    .popup-window .popup-window-icon {
-        font-size: 4em;
-        float: left;
-        padding: 15px;
-    }
-
-        .popup-window .popup-window-icon .fa {
-            display: block;
-        }
-
-
-    .popup-window .popup-container .popup-content {
-        display: block;
-        text-align: center;
-        padding: 15px;
-    }
-
-    .popup-window .popup-window-icon + .popup-content {
-        margin-left: 75px;
-    }
-
-    .popup-window .popup-buttons {
-        margin: 15px 0;
-        text-align: center;
-    }
-
-    .popup-window.static .popup-buttons {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
-
-    .popup-window .popup-buttons button {
-        margin: 0 5px;
-        min-width: 100px;
-    }
-
-        .popup-window .popup-buttons button.popup-button {
-            padding: 10px 15px;
-            border: 1px solid #ddd;
-            background: #eee;
-            cursor: pointer;
-        }
-
-            .popup-window .popup-buttons button.popup-button:hover {
-                border-color: #ccc;
-                background-color: #ddd;
-            }
