--- a/libs/css/filebrowser.css
+++ b/libs/css/filebrowser.css
@@ -454,6 +454,8 @@
             margin: 5px 0;
         }
 
+
+
         .fb-container > .fb-main.grid > .fb-layout > .fb-items > .fb-item .fb-item-date,
         .fb-container > .fb-main.grid > .fb-layout > .fb-items > .fb-item .fb-item-type,
         .fb-container > .fb-main.grid > .fb-layout > .fb-items > .fb-item .fb-item-size {
@@ -461,10 +463,7 @@
         }
 
     /* END GRID DISPLAY */
-
     /* START LIST DISPLAY */
-
-
     .fb-container > .fb-main.list > .fb-layout {
         display: table;
         width: 100%;
@@ -484,6 +483,13 @@
             .fb-container > .fb-main.list > .fb-layout > .fb-hdr > .fb-hdr-item {
                 padding: 15px;
             }
+
+        .fb-container > .fb-main.list > .fb-layout > .fb-items > .fb-item.rename > input {
+            display: table-cell;
+            margin-left: 15px;
+            padding: 5px;
+            width: 80%;
+        }
 
         .fb-container > .fb-main.list > .fb-layout > .fb-items {
             display: table-row-group;
